# investment-manager

./: .env.example  .gitignore  PRD.md  docker-compose.yml
backend/: requirements.txt
backend/app/: config.py  database.py  main.py
backend/app/api/: auth.py  broker_sync.py  dashboard.py  deps.py  errors.py  fx.py  portfolios.py  reports.py  research.py  review.py  simulation.py  snapshots.py  stocks.py
backend/app/models/: __init__.py  broker_sync.py  macro_event.py  portfolio.py  report.py  research.py  review.py  sentiment.py  signal.py  simulation.py  stock.py  user.py
backend/app/schemas/: auth.py  broker_sync.py  portfolio.py  report.py  research.py  review.py  simulation.py  snapshot.py  stock.py
backend/app/services/: auth.py  base.py  fx.py  market_data.py  portfolio.py  recommendation_writer.py  report.py  report_parser.py  research.py  simulation_engine.py  snapshot_writer.py  stock.py
cli/: pyproject.toml
cli/investr/: client.py  main.py
cli/investr/commands/: portfolio.py  report.py  research.py  stock.py
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/broker-sync/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/portfolio/: page.tsx
frontend/src/app/research/: page.tsx
frontend/src/app/review/: page.tsx
frontend/src/app/simulation/: page.tsx
frontend/src/app/stocks/: page.tsx
frontend/src/lib/: AuthContext.tsx  api.ts  useApi.ts
frontend/src/types/: index.ts
scripts/: seed_dev.py  sync_brokers.py
(+18 files in other folders)
