[project]
name = "investr"
version = "0.1.0"
description = "CLI for Investment Manager API"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "rich>=13.0",
]

[project.scripts]
investr = "investr.main:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
